Fixed some erros regarding the spacing on the right side

--- a/style.css
+++ b/style.css
@@ -713,14 +713,6 @@ h2 {
         margin-bottom:0;
     }
 
-    .background {
-        position: absolute; 
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 120% !important;
-        z-index: -1; 
-    }
 
 }
 
